General bug fix

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,38 @@
-BOT_TOKEN=''
+# Telegram
+BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
+
+# Admin
+ADMIN_ID=123456789
+
+# Server
+PORT=3000
+NODE_ENV=development
+
+# Gmail API (OAuth2)
+GMAIL_CLIENT_ID=your_gmail_client_id
+GMAIL_CLIENT_SECRET=your_gmail_client_secret
+GMAIL_REFRESH_TOKEN=your_gmail_refresh_token
+GMAIL_USER=your_email@example.com
+
+# Rate calculation defaults
+DEFAULT_RATE_PER_MILE=2.0
+DEFAULT_BASE_RATE=0
+
+# Geocoding (optional, used to convert addresses to coords)
+GEOCODING_PROVIDER=google# or "mapbox", "here", etc.
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+MAPBOX_API_KEY=your_mapbox_api_key
+
+# Redis (optional, for FSM and session storage)
+REDIS_URL=redis://:password@localhost:6379/0
+
+# Database (optional)
+DATABASE_URL=postgres://user:password@localhost:5432/dbname
+
+# Logging and misc
+LOG_LEVEL=info
+TIMEZONE=UTC
+
+# Feature flags
+ENABLE_TTL_FOR_LOADS=true
+LOAD_TTL_SECONDS=3600
