--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "autobidder",
-  "version": "4.0.0",
-  "description": "Created by Jonas Mikkelsen to automate bidding on loads in Telegram groups.",
-  "main": "dist/index.js",
+  "name": "Autobidder",
+  "version": "4.1.4",
   "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
-    "dev": "node --loader ts-node/esm src/index.ts",
-    "watch": "nodemon --watch src --exec \"node --loader ts-node/esm src/index.ts\""
+    "clean": "rm -rf dist",
+    "start": "node --enable-source-maps dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only --prefer-ts-exts src/index.ts",
+    "lint": "eslint . --ext .ts,.js"
   },
   "dependencies": {
     "@google-cloud/pubsub": "^5.2.0",
     "dotenv": "^17.2.3",
     "googleapis": "^169.0.0",
     "grammy": "^1.39.2",
-    "mailparser": "^3.9.1",
+    "mailparser": "^3.7.5",
     "open": "^11.0.0",
-    "p-retry": "^7.1.1"
+    "p-retry": "^7.1.1",
+    "prettier": "^3.7.4"
   },
   "devDependencies": {
-    "@types/mailparser": "^3.4.6",
-    "@types/node": "^25.0.3",
-    "globals": "^17.0.0",
-    "nodemon": "^3.1.11",
-    "prettier": "^3.7.4",
+    "@types/node": "^25.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
+    "eslint": "^9.39.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.52.0"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "license": "MIT"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
+  }
 }
